--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<h1>My top 5 Favourite Websites</h1>
-<!-- Write your code below -->
-<ol start="1">
-    <li><a href="https://www.producthunt.com/">Product Hunt</a></li>
-    <li><a href="https://smashthewalls.com/">Smash the Walls</a></li>
-    <li><a href="https://www.nytimes.com/games/wordle">Wordle</a></li>
-    <li><a href="https://hackertyper.com/">Hacker Typer</a></li>
-    <li><a href="https://stellarium-web.org/">Stellarium</a></li>
-  </ol>
+<!-- Kitten image URL -->
+
+<h1>I am a Cat Person</h1>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg"/>
+
+<!-- Puppy image URL -->
+
+<h1>I am a Dog Person</h1>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif"/>
